--- a/css/styles.css
+++ b/css/styles.css
@@ -12,22 +12,7 @@
 
   /* цвет фона вторичный #F5F4FA */
 
-  /* Шапка */
- 
- :root{
-    --primary-text-color: rgba(117, 117, 117, 1);
-    --secondary-text-color: rgba(33, 33, 33, 1);
-    --accent-color: #2196F3;
- }
- 
- body{
-     color: var(--primary-text-color);
-     background-color: #FFFFFF;
-
-     font-family: Roboto, sans-serif;
- }
-
- /* .visually-hidden {
+  /* .visually-hidden {
      position: absolute;
      width: 1px;
      height: 1px;
@@ -42,6 +27,64 @@
  }
      */
 
+  
+ html{
+    box-sizing: border-box;
+ }
+
+ body {
+     color: var(--primary-text-color);
+     background-color: #FFFFFF;
+
+     font-family: Roboto, sans-serif;
+     margin: 0;
+ }
+
+ *,
+ *::before,
+ *::after{
+    box-sizing: inherit;
+ }
+
+
+ :root{
+    --primary-text-color: rgba(117, 117, 117, 1);
+    --secondary-text-color: rgba(33, 33, 33, 1);
+    --accent-color: #2196F3;
+ }
+ 
+
+ .container {
+     width: 1230px;
+     margin: 0 auto;
+     padding-left: 15px;
+     padding-right: 15px;
+     outline: 2px solid tomato;
+ }
+
+ ul {
+     list-style: none;
+ }
+
+ h1,
+ h2,
+ h3,
+ h4,
+ p,
+ li,
+ ul {
+     padding: 0;
+     margin: 0
+ }
+    
+
+/* Шапка */
+
+header{
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgba(236, 236, 236, 1);
+}
  .logo{
      color: #000000;
      font-family: Raleway;
@@ -57,9 +100,8 @@
      color: var(--accent-color);
  }
 
- ul{
-     list-style: none;
- }
+
+  
 
  
  /* site-nav */
@@ -116,7 +158,10 @@
 .link-tel:focus{
     color: var(--accent-color);
 }
+
+
     /* Герой */
+
     .hero-title h1{
         font-family: 'Roboto';
             font-style: normal;
@@ -127,22 +172,17 @@
             letter-spacing: 0.06em;
             text-transform: uppercase;
             color: #FFFFFF;
-            background: #2F303A;
+            
+
+            margin-bottom: 30px;
+            margin-top: 0;
     }
-    
 
-
- .section-title{
-     color: var(--secondary-text-color);
-
-    font-family: 'Roboto';
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.16;
+    .hero-title{
+        background-color: #2F303A;
         text-align: center;
-        letter-spacing: 0.03em;
- }
- 
+    }
+
  /* Наши особенности */
  .feature-list .title{
      color: var(--secondary-text-color);
@@ -159,12 +199,43 @@
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
-
  }
 
+  .title{
+    margin-bottom: 10px;
+  }
+
+
+
+ /* Чем мы занимаемся */
+ 
+       .section-title {
+       color: var(--secondary-text-color);
+       font-family: 'Roboto';
+       font-weight: 700;
+       font-size: 36px;
+       line-height: 1.16;
+       text-align: center;
+       letter-spacing: 0.03em;
+       margin-bottom: 50px;
+   }
 
 
  /* Команда */
+ .team-section{
+    background-color: #F5F4FA;
+ }
+
+ .section-team{
+    padding-bottom: 94px;
+    padding-top: 94px;
+ }
+
+
+ .team-foto{
+    margin-bottom: 30px;
+ }
+
  .team-list .title{
      color: var(--secondary-text-color);
         font-style: 400;
@@ -182,6 +253,12 @@
  }
 
  /* Портфолио */
+
+ .portfolio-foto{
+    margin-bottom: 20px;
+    margin-right: 30px;
+
+ }
  .list-portfolio .title-portfolio{
      color: var(--secondary-text-color);
             font-family: 'Roboto';
@@ -189,15 +266,26 @@
             font-size: 18px;
             line-height: 2;
             letter-spacing: 0.06em;
+
+            margin-bottom: 4px;
  }
 
  .list-portfolio .portfolio-text{
         font-size: 16px;
         line-height: 1.88;
         letter-spacing: 0.03em;
+
+        margin-bottom: 50px;
  }
 
  /* Подвал */
+
+footer{
+    background-color: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    
+}
 
 .logo-footer{
         font-family: 'Raleway';
@@ -208,6 +296,7 @@
             letter-spacing: 0.03em;
             color: #FFFFFF;
             text-decoration: none;
+            display: flex;
 }
 
 .img-logo-footer{
@@ -242,9 +331,7 @@
         letter-spacing: 0.03em;
  }
 
-  footer{
-      background-color: #2F303A;;
-  }
+ 
 
   /* Кнопка */
 
@@ -252,6 +339,8 @@
     font-family: 'Roboto';
     color: #FFFFFF;
     background-color: var(--accent-color);
+    min-width: 200px;
+    height: 50px;
         font-weight: 700;
         font-size: 16px;
         line-height: 1.87;
@@ -259,30 +348,59 @@
         align-items: center;
         text-align: center;
         letter-spacing: 0.06em;
+        
+
+        padding-top: 10px;
+        padding-bottom: 10px;
+        padding-left: 32px;
+        padding-right: 32px;
+        margin: auto;
+        border-radius: 4px;
+        border: 4px solid var(--accent-color);
 }
 
-  .button{
-    font-family: 'Roboto';
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.62;
-        text-align: center;
-        letter-spacing: 0.03em;
+.primary-button {
+    margin-bottom: 50px;
+    margin-right: 8px;
+    padding: 6px 22px;
+    min-width: 73px;
+    min-height: 38px;
 
-        cursor: pointer;
-  }
-
-  .primary-button{
     color: #FFFFFF;
-      background-color: #2196F3;
-      font-family: 'Roboto';
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.62;
-      letter-spacing: 0.03em;
-        
-        cursor: pointer;
+    background-color: #2196F3;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+    border-color: transparent;
+    box-shadow: 0px 4px 4px #858585;
+
+    cursor: pointer;
+}
+
+.button{
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+    margin-right: 8px;
+    min-width: 128px;
+    min-height: 38px;
+    padding: 6px 22px;
+
+    background: #F5F4FA;
+    border-radius: 4px;
+    border-color: transparent;
+
+    cursor: pointer;
   }
+
+  
 
   
 
