--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@
  }
 
  body {
+    width: 1600px;
      color: var(--primary-text-color);
      background-color: #FFFFFF;
 
@@ -64,6 +65,9 @@
 
  ul {
      list-style: none;
+ }
+ img{
+    display: block;
  }
 
  h1,
@@ -101,10 +105,38 @@ header{
  }
 
 
-  
+/* Навигация */
+
+nav{
+    display: flex;
+    align-items: center;
+}
+
+  .header-nav{
+    display: flex;
+  }
 
  
  /* site-nav */
+
+ .site-nav{
+    margin-top: 32px;
+    margin-bottom: 32px;
+    margin-left: 93px;
+    display: flex;
+    align-items: center;
+    }
+
+    .site-nav li {
+        margin-right: 50px;
+        /* outline: 1px solid tomato; */
+    }
+
+    .site-nav li:last-child{
+        margin-right: 0%;
+    }
+        
+
  .site-nav .link{
      color: var(--secondary-text-color);
      font-family: 'Roboto';
@@ -129,6 +161,20 @@ header{
 
 
  /* auth-nav */
+ 
+.auth-nav{
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+}
+.auth-nav li{
+    margin-right: 50px;
+}
+
+.auth-nav li:last-child {
+    margin-right: 0%;
+}
+
 .auth-nav .link-mail{
     color: var(--primary-text-color);
     text-decoration: none;
@@ -179,11 +225,28 @@ header{
     }
 
     .hero-title{
+        width: 1600px;
         background-color: #2F303A;
         text-align: center;
     }
 
  /* Наши особенности */
+
+ .feature-list{
+    display: flex;
+ }
+
+ .feature-list li{
+    margin-right: 30px;
+    margin-bottom: 94px;
+    min-width: 270px;
+    min-height: 101px;
+ }
+
+ .feature-list li:last-child {
+     margin-right: 0%;
+ }
+
  .feature-list .title{
      color: var(--secondary-text-color);
 
@@ -220,15 +283,46 @@ header{
        margin-bottom: 50px;
    }
 
+   .titlt-example{
+    display: flex;
+   }
+
+   .titlt-example li{
+    margin-right: 30px;
+    margin-bottom: 188px;
+   }
+
+   .titlt-example li:last-child {
+       margin-right: 0%;
+   }
+
 
  /* Команда */
  .team-section{
+    text-align: center;
     background-color: #F5F4FA;
+ }
+
+ .section-title{
+    margin-bottom: 50px;
  }
 
  .section-team{
     padding-bottom: 94px;
     padding-top: 94px;
+ }
+
+ .team-list{
+    display: flex;
+ }
+
+ .title-team{
+    margin-right: 30px;
+    border: 2px solid transparent;
+ }
+
+ .title-team:last-child {
+     margin-right: 0%;
  }
 
 
@@ -252,22 +346,43 @@ header{
      letter-spacing: 0.03em;
  }
 
+ /* Фильтр */
+ .button-list{
+ display: flex;
+ justify-content: center;
+ }
+
  /* Портфолио */
 
- .portfolio-foto{
-    margin-bottom: 20px;
-    margin-right: 30px;
-
+ .filter-button{
+    margin-top: 94px;
+    margin-bottom: 34px;
+    outline: 1px solid tomato;
  }
+ .list-portfolio{
+    display: flex;
+    flex-wrap: wrap;
+ }
+
+
+ .border-foto{
+    border: 1px solid rgba(238, 238, 238, 1);
+ }
+
+ .item-portfolio{
+    margin-right: 30px;
+    margin-bottom: 30px;
+ }
+
  .list-portfolio .title-portfolio{
      color: var(--secondary-text-color);
-            font-family: 'Roboto';
-            font-weight: 700;
-            font-size: 18px;
-            line-height: 2;
-            letter-spacing: 0.06em;
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
 
-            margin-bottom: 4px;
+        margin-bottom: 4px;
  }
 
  .list-portfolio .portfolio-text{
@@ -278,13 +393,16 @@ header{
         margin-bottom: 50px;
  }
 
+
+
+
  /* Подвал */
 
 footer{
+    display: flex;
     background-color: #2F303A;
     padding-top: 60px;
     padding-bottom: 60px;
-    
 }
 
 .logo-footer{
@@ -296,7 +414,8 @@ footer{
             letter-spacing: 0.03em;
             color: #FFFFFF;
             text-decoration: none;
-            display: flex;
+            display: inline-block;
+            margin-bottom: 20px;      
 }
 
 .img-logo-footer{
@@ -318,6 +437,7 @@ footer{
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
+        margin-bottom: 9px;
  }
 
  .address .link{
@@ -329,6 +449,8 @@ footer{
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
+        display: inline-block;
+        margin-bottom: 9px;
  }
 
  
@@ -349,7 +471,6 @@ footer{
         text-align: center;
         letter-spacing: 0.06em;
         
-
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 32px;
