--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,10 @@
 
  .container {
      width: 1230px;
-     margin: 0 auto;
      padding-left: 15px;
      padding-right: 15px;
+     margin-left: auto;
+     margin-right: auto;
      outline: 2px solid tomato;
  }
 
@@ -370,8 +371,17 @@ nav{
  }
 
  .item-portfolio{
+    min-width: 380px;
     margin-right: 30px;
     margin-bottom: 30px;
+ }
+
+ .item-portfolio:nth-child(3n){
+    margin-right: 0;
+ }
+
+ .item-portfolio:nth-last-child(-n + 3){
+    margin-bottom: 0;
  }
 
  .list-portfolio .title-portfolio{
@@ -397,7 +407,6 @@ nav{
 
 
  /* Подвал */
-
 footer{
     display: flex;
     background-color: #2F303A;
