--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@
  }
 
  body {
-    width: 1600px;
      color: var(--primary-text-color);
      background-color: rgba(255, 255, 255, 1);
 
@@ -56,9 +55,9 @@
  
 
  .container {
-     width: 1230px;
-     padding-left: 15px;
-     padding-right: 15px;
+     width: 1200px;
+     /* padding-left: 15px;
+     padding-right: 15px; */
      margin-left: auto;
      margin-right: auto;
      /* outline: 2px solid tomato; */
@@ -122,8 +121,6 @@ nav{
  /* site-nav */
 
  .site-nav{
-    margin-top: 32px;
-    margin-bottom: 32px;
     margin-left: 93px;
     display: flex;
     align-items: center;
@@ -139,24 +136,30 @@ nav{
     }
         
 
- .site-nav .link{
+    .site-nav .link{
      color: var(--secondary-text-color);
      font-family: 'Roboto';
         font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        display: block;
 
         text-decoration: none;
  }
 
- .site-nav .link.current{
+    .site-nav .link.current{
      color: var(--accent-color);
-    font-family: 'Roboto';
+     font-family: 'Roboto';
         font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
+        padding-top: 32px;
+        padding-bottom: 32px;
+        display: block;
 
         text-decoration: none;
  }
@@ -229,14 +232,19 @@ nav{
     .hero-title{
         padding-top: 200px;
         padding-bottom: 200px;
-        width: 1600px;
+        
         background-color: #2F303A;
         text-align: center;
     }
 
  /* Наши особенности */
+     
+    .section {
+     padding-top: 94px;
+     padding-bottom: 94px;
+ }
  
-    /* .visually-hidden {
+    .visually-hidden {
          position: absolute;
          width: 1px;
          height: 1px;
@@ -249,18 +257,15 @@ nav{
          clip: rect(0 0 0 0);
          overflow: hidden;
      }
-         */
- 
+        
 
  .feature-list{
     display: flex;
- }
+}
 
  .feature-list li{
-    margin-right: 30px;
-    margin-bottom: 94px;
-    min-width: 270px;
-    min-height: 101px;
+    width: 270px;
+    
  }
 
  .feature-list li:last-child {
@@ -291,6 +296,11 @@ nav{
 
 
  /* Чем мы занимаемся */
+       .section-work{
+        padding-top: 94px;
+        padding-bottom: 94px;
+       }
+       
  
        .section-title {
        color: var(--secondary-text-color);
@@ -303,16 +313,15 @@ nav{
        margin-bottom: 50px;
    }
 
-   .titlt-example{
+   .title-example{
     display: flex;
    }
-
-   .titlt-example li{
+  
+  .title-example li{
     margin-right: 30px;
-    margin-bottom: 188px;
    }
 
-   .titlt-example li:last-child {
+   .title-example li:last-child {
        margin-right: 0%;
    }
 
@@ -321,15 +330,12 @@ nav{
  .team-section{
     text-align: center;
     background-color: #F5F4FA;
+    padding-bottom: 94px;
+    padding-top: 94px;
  }
 
  .section-title{
     margin-bottom: 50px;
- }
-
- .section-team{
-    padding-bottom: 94px;
-    padding-top: 94px;
  }
 
  .team-list{
@@ -349,6 +355,10 @@ nav{
  .team-foto{
     margin-bottom: 30px;
  }
+   .box-team{
+    padding-top: 30px;
+    padding-bottom: 30px;
+   }
 
  .team-list .title{
      color: var(--secondary-text-color);
@@ -367,18 +377,23 @@ nav{
  }
 
  /* Фильтр */
+ .filter-portfolio{
+    padding-top: 94px;
+    padding-bottom: 94px;
+ }
+
  .button-list{
  display: flex;
  justify-content: center;
+ margin-bottom: 34px;
+ }
+
+ .button-list li{
+    margin-right: 8px;
  }
 
  /* Портфолио */
 
- .filter-button{
-    margin-top: 94px;
-    margin-bottom: 34px;
-    /* outline: 1px solid tomato; */
- }
  .list-portfolio{
     display: flex;
     flex-wrap: wrap;
@@ -388,9 +403,13 @@ nav{
  .border-foto{
     border: 1px solid rgba(238, 238, 238, 1);
  }
+ 
+ .text-foto{
+    padding: 20px 24px;
+ }
 
  .item-portfolio{
-    min-width: 380px;
+    min-width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
  }
@@ -418,8 +437,7 @@ nav{
         font-size: 16px;
         line-height: 1.88;
         letter-spacing: 0.03em;
-
-        margin-bottom: 50px;
+    
  }
 
 
@@ -478,6 +496,17 @@ footer{
         display: inline-block;
         margin-bottom: 9px;
  }
+   .address .link-tel{
+    color: rgba(255, 255, 255, 0.6);
+        text-decoration: none;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
+        display: inline-block;
+   }
 
  
 
@@ -507,9 +536,6 @@ footer{
 }
 
 .primary-button {
-    margin-bottom: 50px;
-    margin-right: 8px;
-    padding: 6px 22px;
     min-width: 73px;
     min-height: 38px;
 
@@ -523,6 +549,7 @@ footer{
     border-radius: 4px;
     border-color: transparent;
     box-shadow: 0px 4px 4px #858585;
+    padding: 6px 22px;
 
     cursor: pointer;
 }
@@ -534,15 +561,12 @@ footer{
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
-    margin-bottom: 50px;
-    margin-right: 8px;
     min-width: 128px;
     min-height: 38px;
-    padding: 6px 22px;
-
     background: #F5F4FA;
     border-radius: 4px;
     border-color: transparent;
+    padding: 6px 22px;
 
     cursor: pointer;
   }
