--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,8 @@
      width: 1200px;
      margin-left: auto;
      margin-right: auto;
+     padding-right: 15px;
+     padding-left: 15px;
      /* outline: 2px solid tomato; */
  }
 
@@ -262,6 +264,8 @@ nav{
 }
 
  .feature-list li{
+    margin-right: 30px;
+
     width: 270px;
     
  }
@@ -295,7 +299,6 @@ nav{
 
  /* Чем мы занимаемся */
        .section-work{
-        padding-top: 94px;
         padding-bottom: 94px;
        }
        
@@ -349,10 +352,6 @@ nav{
      margin-right: 0%;
  }
 
-
- .team-foto{
-    margin-bottom: 30px;
- }
    .box-team{
     padding-top: 30px;
     padding-bottom: 30px;
@@ -383,7 +382,7 @@ nav{
  .button-list{
  display: flex;
  justify-content: center;
- margin-bottom: 34px;
+
  }
 
  .button-list li{
@@ -395,6 +394,8 @@ nav{
  .list-portfolio{
     display: flex;
     flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
  }
 
 
@@ -408,16 +409,9 @@ nav{
 
  .item-portfolio{
     min-width: 370px;
+    flex-basis: calc(100% / 3 - 30px);
     margin-right: 30px;
     margin-bottom: 30px;
- }
-
- .item-portfolio:nth-child(3n){
-    margin-right: 0;
- }
-
- .item-portfolio:nth-last-child(-n + 3){
-    margin-bottom: 0;
  }
 
  .list-portfolio .title-portfolio{
@@ -548,6 +542,7 @@ footer{
     border-color: transparent;
     box-shadow: 0px 4px 4px #858585;
     padding: 6px 22px;
+    margin-bottom: 50px;
 
     cursor: pointer;
 }
@@ -565,6 +560,7 @@ footer{
     border-radius: 4px;
     border-color: transparent;
     padding: 6px 22px;
+    margin-bottom: 50px;
 
     cursor: pointer;
   }
